apps/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`idp.stadthagen.dev`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: idp-tls
